Improvement to the formatting of the GUI menu item text in the manual.
The text can now have a line break between the items, just after the arrows.  This significantly
improves the paragraph layout in the manual.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -89,8 +89,8 @@
 \newcommand{\gui}[1]{``{\small \textsf{#1}}''}
 \newcommand{\guibutton}[1]{``{\small \textsf{#1}}''}
 \newcommand{\guimenuitemone}[1]{``{\small \textsf{#1}}''}
-\newcommand{\guimenuitemtwo}[2]{``{\small \textsf{#1$\to$#2}}''}
-\newcommand{\guimenuitemthree}[3]{``{\small \textsf{#1$\to$#2$\to$#3}}''}
+\newcommand{\guimenuitemtwo}[2]{``{\small \textsf{#1$\to$\linebreak[0]#2}}''}
+\newcommand{\guimenuitemthree}[3]{``{\small \textsf{#1$\to$\linebreak[0]#2$\to$\linebreak[0]#3}}''}
 \newcommand{\guistring}[1]{``{\small \textsf{#1}}''}
 \newcommand{\directory}[1]{\texttt{#1}}
 \newcommand{\file}[1]{\texttt{#1}}
