--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -95,6 +95,8 @@
 \newcommand{\directory}[1]{\texttt{#1}}
 \newcommand{\file}[1]{\texttt{#1}}
 \newcommand{\module}[1]{\texttt{#1}}
+\newcommand{\ossep}{/\linebreak[0]}
+\newcommand{\osus}{\_\linebreak[0]}
 \newcommand{\pycode}[1]{{\small \texttt{#1}}}
 \newcommand{\pystring}[1]{`{\small \texttt{#1}}'}
 \newcommand{\software}[1]{\texttt{#1}}
